--- a/hw/index.html
+++ b/hw/index.html
@@ -12,6 +12,14 @@
         <div class="download-text">
             <h2>Stay focused on saving money</h2><p>It is important to stay focused on saving money in any way you can. We help you monitor your spending habits so you can easily spot and cut any unnecessary expenses. Simply join today to get started!</p>
         </div>
+        <div class="download-icon">
+            <a href="https://play.google.com/store"><img src="img/playmarket.png" alt="playmarket logo"></a>
+            <a href="https://www.apple.com/ru/app-store/"><img src="img/appstore.png" alt="appstore logo"></a>
+            <a href="https://www.microsoft.com/uk-ua/store/apps/windows"><img src="img/windows.png" alt="windows logo"></a>
+        </div>
+        <div>
+            <img class="video" src="img/video.png" alt="video picture">
+        </div>
     </section>
 </body>
 </html>
