--- a/hw/index.html
+++ b/hw/index.html
@@ -21,5 +21,58 @@
             <img class="video" src="img/video.png" alt="video picture">
         </div>
     </section>
+    <section class="contact">
+        <div class="contact-text">
+            <h2>Contact</h2><p>Questions or concerns? Just fill out the form below and our support team will get back to you within 24 hours</p>
+        </div>
+        <div class="input-fields">
+            <input class="field" type="text" placeholder="First Name">
+            <input class="field" type="text" placeholder="Last Name">
+            <input class="field long" type="text" placeholder="Phone Number">
+            <select class="field long">
+                <option selected disabled>Select Service</option>
+                <option>First service</option>
+                <option>Second service</option>
+                <option>Third service</option>
+            </select>
+            <button type="button" class="sumbit">Sumbit now</button>
+        </div>
+    </section>
+    <footer>
+        <div class="info">
+            <h3>Address</h3>
+            <h3>Services</h3>
+            <h3>Get in Touch</h3>
+            <h3>We Support</h3>
+            <span>
+                <a href="https://www.google.com.ua/maps/">
+                    <div class="footer-div">Pipang Ltd, Griva Digeni,</div>
+                    <div class="footer-div">81-83 Jacovides Tower, 1st Floor</div>
+                    <div class="footer-div">1090 Picosia USA</div>
+                </a>
+            </span>
+            <span>
+                <div class="footer-div"><a href="#">Overviev</a></div>
+                <div class="footer-div"><a href="#">Features</a></div>
+                <div class="footer-div"><a href="#">Technology</a></div>
+                <div class="footer-div"><a href="#">Terms & Conditions</a></div>
+                <div class="footer-div"><a href="#">Privecy</a></div></span>
+            <span>
+                <div class="footer-div">info@cloudbudget.com</div> 
+                <div class="footer-div">+1 844-721-7120</div> 
+                <div class="links footer-div">
+                    <a href="https://www.facebook.com"><img src="img/facebook.png" alt="facebook logo"></a>
+                    <a href="https://www.linkedin.com"><img src="img/linkedin.png" alt="linkedin logo"></a>
+                    <a href="https://twitter.com"><img src="img/twitter.png" alt="twitter logo"></a>
+                </div>
+            </span>
+            <span>
+                <img src="img/secure.png" alt="visa and mastercard logo">
+            </span>
+            <span class="copyright">
+                Copyright 2018 CloudBudget
+            </span>
+        </div>
+    </footer>
 </body>
 </html>
