--- a/hw/index.html
+++ b/hw/index.html
@@ -9,69 +9,75 @@
 </head>
 <body>
     <section class="download">
-        <div class="download-text">
-            <h2>Stay focused on saving money</h2><p>It is important to stay focused on saving money in any way you can. We help you monitor your spending habits so you can easily spot and cut any unnecessary expenses. Simply join today to get started!</p>
-        </div>
-        <div class="download-icon">
-            <a href="https://play.google.com/store"><img src="img/playmarket.png" alt="playmarket logo"></a>
-            <a href="https://www.apple.com/ru/app-store/"><img src="img/appstore.png" alt="appstore logo"></a>
-            <a href="https://www.microsoft.com/uk-ua/store/apps/windows"><img src="img/windows.png" alt="windows logo"></a>
-        </div>
-        <div>
-            <img class="video" src="img/video.png" alt="video picture">
+        <div class="download-container">
+            <div class="download-text">
+                <h2>Stay focused on saving money</h2><p>It is important to stay focused on saving money in any way you can. We help you monitor your spending habits so you can easily spot and cut any unnecessary expenses. Simply join today to get started!</p>
+            </div>
+            <div class="download-icon">
+                <a href="https://play.google.com/store"><img src="img/playmarket.png" alt="playmarket logo"></a>
+                <a href="https://www.apple.com/ru/app-store/"><img src="img/appstore.png" alt="appstore logo"></a>
+                <a href="https://www.microsoft.com/uk-ua/store/apps/windows"><img src="img/windows.png" alt="windows logo"></a>
+            </div>
+            <div>
+                <img class="video" src="img/video.png" alt="video picture">
+            </div>
         </div>
     </section>
     <section class="contact">
-        <div class="contact-text">
-            <h2>Contact</h2><p>Questions or concerns? Just fill out the form below and our support team will get back to you within 24 hours</p>
-        </div>
-        <div class="input-fields">
-            <input class="field" type="text" placeholder="First Name">
-            <input class="field" type="text" placeholder="Last Name">
-            <input class="field long" type="text" placeholder="Phone Number">
-            <select class="field long">
-                <option selected disabled>Select Service</option>
-                <option>First service</option>
-                <option>Second service</option>
-                <option>Third service</option>
-            </select>
-            <button type="button" class="sumbit">Sumbit now</button>
+        <div class="contact-container">
+            <div class="contact-text">
+                <h2>Contact</h2><p>Questions or concerns? Just fill out the form below and our support team will get back to you within 24 hours</p>
+            </div>
+            <div class="input-fields">
+                <input class="field" type="text" placeholder="First Name">
+                <input class="field" type="text" placeholder="Last Name">
+                <input class="field long" type="text" placeholder="Phone Number">
+                <select class="field long">
+                    <option selected disabled>Select Service</option>
+                    <option>First service</option>
+                    <option>Second service</option>
+                    <option>Third service</option>
+                </select>
+                <button type="button" class="sumbit">Sumbit now</button>
+            </div>
         </div>
     </section>
     <footer>
-        <div class="info">
-            <h3>Address</h3>
-            <h3>Services</h3>
-            <h3>Get in Touch</h3>
-            <h3>We Support</h3>
-            <span>
-                <a href="https://www.google.com.ua/maps/">
-                    <div class="footer-div">Pipang Ltd, Griva Digeni,</div>
-                    <div class="footer-div">81-83 Jacovides Tower, 1st Floor</div>
-                    <div class="footer-div">1090 Picosia USA</div>
-                </a>
-            </span>
-            <span>
-                <div class="footer-div"><a href="#">Overviev</a></div>
-                <div class="footer-div"><a href="#">Features</a></div>
-                <div class="footer-div"><a href="#">Technology</a></div>
-                <div class="footer-div"><a href="#">Terms & Conditions</a></div>
-                <div class="footer-div"><a href="#">Privecy</a></div></span>
-            <span>
-                <div class="footer-div">info@cloudbudget.com</div> 
-                <div class="footer-div">+1 844-721-7120</div> 
-                <div class="links footer-div">
-                    <a href="https://www.facebook.com"><img src="img/facebook.png" alt="facebook logo"></a>
-                    <a href="https://www.linkedin.com"><img src="img/linkedin.png" alt="linkedin logo"></a>
-                    <a href="https://twitter.com"><img src="img/twitter.png" alt="twitter logo"></a>
-                </div>
-            </span>
-            <span>
-                <img src="img/secure.png" alt="visa and mastercard logo">
-            </span>
-            <span class="copyright">
-                Copyright 2018 CloudBudget
-            </span>
+        <div class="footer-container">
+            <div class="info">
+                <h3>Address</h3>
+                <h3>Services</h3>
+                <h3>Get in Touch</h3>
+                <h3>We Support</h3>
+                <span>
+                    <a href="https://www.google.com.ua/maps/">
+                        <div class="footer-item">Pipang Ltd, Griva Digeni,</div>
+                        <div class="footer-item">81-83 Jacovides Tower, 1st Floor</div>
+                        <div class="footer-item">1090 Picosia USA</div>
+                    </a>
+                </span>
+                <span>
+                    <div class="footer-item"><a href="#">Overviev</a></div>
+                    <div class="footer-item"><a href="#">Features</a></div>
+                    <div class="footer-item"><a href="#">Technology</a></div>
+                    <div class="footer-item"><a href="#">Terms & Conditions</a></div>
+                    <div class="footer-item"><a href="#">Privecy</a></div></span>
+                <span>
+                    <div class="footer-item">info@cloudbudget.com</div> 
+                    <div class="footer-item">+1 844-721-7120</div> 
+                    <div class="footer-item links">
+                        <a href="https://www.facebook.com"><img src="img/facebook.png" alt="facebook logo"></a>
+                        <a href="https://www.linkedin.com"><img src="img/linkedin.png" alt="linkedin logo"></a>
+                        <a href="https://twitter.com"><img src="img/twitter.png" alt="twitter logo"></a>
+                    </div>
+                </span>
+                <span>
+                    <img src="img/secure.png" alt="visa and mastercard logo">
+                </span>
+                <span class="copyright">
+                    Copyright 2018 CloudBudget
+                </span>
+            </div>
         </div>
     </footer>
 </body>
